# Language_Playground

./: .gitignore  README.md
00.OwnProjects/ConsoleApp_CalculatorOfThings/: bmr.h  currency.c  currency.h
01.C_Essentials_SoftUni/02.DataTypes/: CMakeLists.txt  main.c
01.C_Essentials_SoftUni/03.ConditionalStatements/: main.c
01.C_Essentials_SoftUni/04.ComplexConditionalStatements/: CMakeLists.txt  main.c
01.C_Essentials_SoftUni/06.WhileLoop/: CMakeLists.txt  main.c
01.C_Essentials_SoftUni/07.NestedLoops/: CMakeLists.txt  main.c
02.Basic_Projects_C/02.ConsoleApp_CalculatorOfThings/: bmi.c  main.c  temperature.h  temperature_table.h
02.C_CalculatorOfThings_Console/: menu.h
03.C_BasicApplication_withGUI/: gui.py
05.C_Desktop_PasswordManager/: CMakeLists.txt  gui_menu.py
05.Go_LogicOperators_withGUI/: main.go
05.Go_ToDoList_withDB/: go.sum  index.html  main.go  todos.db
06.Go_LogicOperators_withGUI/: go.sum  main.go
07.Go_PasswordManager_Console/: go.sum  main.go
08.Go_PasswordManager_Console/: config.txt  go.sum  main.go
08.Go_PasswordManager_withGUI/: menu.go
09.Go_CurrencyConverterTUI/: .gitignore
09.Go_PasswordManager_Console/: config_loader.go  crypto.go  file-utils.go  generator.go  main.go  pass-utils.go  user-salt.txt  utils.go
10.Go_FPD-Tools_HTMX/: altitude_data.json  index.html  main.go
11.Go_CurrencyConverterTUI/: LICENSE  Makefile  go.sum  readme.md
ConsoleApp_CalculatorOfThings/: CMakeLists.txt  bmi.h  bmr.c  menu.c  temperature.c  temperature_table.c
GUI_BasicApplication/: CMakeLists.txt  gui.py
(+31 files in other folders)
